feat: CGLib을 이용한 proxy